# Arduino-ESP32

./: README.md
Balanza/: .gitignore  README.md
Balanza/Bal_Blue/: Bal_Blue.ino  Balanza.aia  Balanza.apk
Balanza/Circuitos/: Balanza.fzz  Balanza_Bluetooth.fzz  Balanza_HX711_ESP32.fzz
Balanza/DOCs/Fritzing/: Bluetooth HC-05 Gomcu.fzpz
CuadernoTecnico/: .gitignore  Enlaces.txt  README.md
CuadernoTecnico/Almacenamiento/Config_Serial/: Config_Serial.fzz  Config_Serial.ino  Funciones.h
CuadernoTecnico/Almacenamiento/EjSPIFFS/: EjSPIFFS.ino
CuadernoTecnico/Almacenamiento/EjSPIFFS_ST7735/: EjSPIFFS_ST7735.ino
CuadernoTecnico/Extras/: Comandos_ESP32
CuadernoTecnico/Motores/: README.md
CuadernoTecnico/RustArduino/: .gitignore  Cargo.toml  README.md
CuadernoTecnico/RustArduino/.cargo/: config.toml
CuadernoTecnico/RustArduino/esquemas/: Analogico.fzz  motor.fzz
HMC5883L_3Axi/: README.md  keyword.txt  library.properties
HMC5883L_3Axi/src/: HMC5883L_3Axi.cpp  HMC5883L_3Axi.h
Lib_Caronte/: .gitignore  README.md
Lib_Caronte/AppInventor/: BluCaronte_Maestro.aia  Bluetooth.aia
Lib_Caronte/Arduino_ESP32/: GenLib.sh  keyword.txt  library.properties  library.properties.Arduino
Lib_Caronte/C/: Makefile  NOTAS.txt
MiBADUSB/: .gitignore  Manual.odt  README.md
MiBADUSB/Ejemplos/: EJECUTA_DesAntivirus.TXT  EJECUTA_Lin.TXT  EJECUTA_ShellInverso.TXT  EJECUTA_URLWIN.TXT  EJECUTA_WIN.TXT  MIBADUSB
MiBADUSB/Teclado_SD/: Teclado_SD.ino
Temperatura/: README.md
TesterResistencia/: TestResistencia.fzz  TesterResistencia.ino
VideoTutoriales/: README.md
(+136 files in other folders)
