[package]
name = "ejemplos-arduino-uno"
version = "0.1.0"
authors = ["pinguytaz <webmaster@pinguytaz.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"

#[[bin]]
#name = "digitales"
#test = false
#bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "45a37eb746d264166c3ea382fed323a204104998"
features = ["arduino-uno"]

#Para interripciones
[dependencies.avr-device]
version = "0.5.4"
features = ["atmega328p"]


# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
